<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    tools:context=".MainActivity">


...
            android:text="Username: "
            android:textColor="#EDA071"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Username Here"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#EDA071"></EditText>
...
            android:text="Password: "
            android:textColor="#EDA071"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#EDA071"></EditText>
...
            android:text="Home"
            android:textColor="#EDA071"
            android:textSize="20sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#533B2D"
            android:text="Login"
            android:textColor="#EDA071"
...
