...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126">

            <Button
                android:id="@+id/recipe_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Recipe"
                android:textColor="#000000"
...
            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="serif-monospace"
                android:text="description"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

...
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/view_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Profile"
...
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Search"
...
