...
                android:textColor="#000000"
                android:fontFamily="serif-monospace"
                android:textSize="16dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/comment_edt"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:hint="Type Comment Here"
                android:fontFamily="serif-monospace"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="14dp"></EditText>

            <Button
                android:id="@+id/cmtSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5ee9e"
                android:text="Send"
                android:fontFamily="serif-monospace"
                android:textSize="16dp"
...
